# XPize

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  XPize2.sln  vcpkg.json
XPize2.App/: AppFrame.cpp  AppFrame.h  ArchiveExtractor.cpp  ArchiveExtractor.h  Constants.h  DirTraverser.cpp  DirTraverser.h  ExtractionDoneEvent.cpp  ExtractionDoneEvent.h  LoadImageEvent.cpp  LoadImageEvent.h  MainApp.cpp  MainApp.h  Scroller.cpp  Scroller.h  Util.h  XPize2.App.rc  XPize2.App.vcxproj  XPize2.App.vcxproj.filters  XPize2.cbp  XPize2.depend  XPize2.layout  vcpkg.json
